fix appearance of nav over menu on mobile

--- a/src/css/menu.less
+++ b/src/css/menu.less
@@ -370,7 +370,7 @@
 }
 
 .mobile-nav {
-  position: static;
+  position: relative;
   top: 0;
   width: 100%;
   z-index: 4;
